--- a/rapport.tex
+++ b/rapport.tex
@@ -34,21 +34,20 @@ Ce rapport présente notre travail et la façon dont nous avons résolu les prob
 
 \section{Mathématiques}
 Le premier problème d’ordre mathématique a été au niveau de la compréhension de l’algèbre de Grassman en lui-même. Nous avons eu du mal avec la partie sur les bases duales, pourquoi certaines sont négatives et pourquoi certaines sont positives. Il a fallu que nous posions tous les calculs sur feuille. Nous en sommes arrivés au resultats suivants : 
-
-Pour les vecteurs: 
+\newline Pour les vecteurs: 
 $$e1=-e234 e2=e134 e3=-e124 e4=e123$$ 
 Pour les bivecteurs:
 $$e12=e34 e13=-e24 e14=e23 e23=e14 e24=-e13 e34=e12$$
 Pour les trivecteurs: 
 $$e123=-e4 e124=e3 e134=-e2 e234=e1$$
-Cela nous a permis de comprendre comment faire les opérateurs $$^ et ~$$.
+Cela nous a permis de comprendre comment faire les opérateurs \textasciicircum  et \textasciitilde.
 
 
 \section{Programmation}
 Implémenter cette librairie en C++ s'est fait en plusieurs étapes. Tout d'abord nous avons défini les objets mathématiques sous forme de classes.
 En utilisant la librairie Eigen, nous avons pu profiter des fonctionnalités de la classe Matrix (notamment l'opérateur d'affectation "<<" et "=").
 
-Un problème rencontré lors du développement a été la surcharge des operéteurs "\^" et "\~" respectivement wedge product et base duale.
+Un problème rencontré lors du développement a été la surcharge des operéteurs "\textasciicircum" et "\textasciitilde" respectivement wedge product et base duale.
 En effet toutes les classes C++ dépendant les unes des autres pour ces opérateurs, il est apparu compliqué de les surcharger en tant que méthodes membres (risque de dépendance circulaire).
 Afin de résoudre ce problème, nous avons utilisé des fonctions externes, donc reliées à aucune classe.
 
@@ -60,7 +59,9 @@ Pour faciliter l'utilisation des classes représentant des scalaires, nous avons
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \section{Conclusion}
-\LaTeX, c'est bien.
+L'utilisation du C++ nous a permis d'écrire rapidement ue implémentation de l'algèbre de Grassmann-Cayley. La surcharge des opérateurs est un moyen très pratique d'exposer des méthodes intuitives pour exploiter des concepts mathématiques en programmation.
+La bibliothèque Eigen nous a également été d'une grande utilité.
+\newline P.S : vous me devez 0.5 points pour avoir corrigé votre code de TP ! :D
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
